old-console-chat/src/screens/snapshots/Console_Chat__screens__chat__tests__render_chat_msg.snap
---
source: src/screens/chat.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════╗"
"║╭User1──────────────────╮                                                     ║"
"║│lorem ipsum 0          │                                                     ║"
"║╰───────────────────────╯                                                     ║"
"║╭User1──────────────────╮                                                     ║"
"║│lorem ipsum 1          │                                                     ║"
"║╰───────────────────────╯                                                     ║"
"║╭User1──────────────────╮                                                     ║"
"║│lorem ipsum 2          │                                                     ║"
"║╰───────────────────────╯                                                     ║"
"║╭User1──────────────────╮                                                     ║"
"║│lorem ipsum 3          │                                                     ║"
"║╰───────────────────────╯                                                     ║"
"║╭User1──────────────────╮                                                     ║"
"║│lorem ipsum 4          │                                                     ║"
"║╰───────────────────────╯                                                     ║"
"║╭────────────────────────────────────────────────────────────────────────────╮║"
"║│Input                                                                       │║"
"║╰────────────────────────────────────────────────────────────────────────────╯║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
